--- a/listado-personas/src/app/app.component.html
+++ b/listado-personas/src/app/app.component.html
@@ -11,6 +11,12 @@
   [indice]="i"
   ></app-persona>
 </div> -->
+<div class="box centrado">
+  <a *ngIf="!isAuth()" class="cursor:pointer" routerLink="/login">Login</a>
+</div>
+<div class="box centrado">
+  <a *ngIf="isAuth()" class="cursor:pointer" (click)="salir()">Salir</a>
+</div>
 <div class="box" id="heading">
   <h1>{{titulo}}</h1>
 </div>
