--- a/listado-personas/src/app/personas/formulario/formulario.component.html
+++ b/listado-personas/src/app/personas/formulario/formulario.component.html
@@ -26,5 +26,6 @@
     [(ngModel)]="apellidoInput" required>
 
     <button type="submit"(click)="onAgregarPersona()" style="cursor: pointer">+</button>
+    <button type="submit"(click)="eliminarPersona()" style="cursor: pointer;background-color: red;">-</button>
   </form>
 </div>
