--- a/listado-personas/src/app/personas/personas.component.html
+++ b/listado-personas/src/app/personas/personas.component.html
@@ -10,6 +10,7 @@
   ></app-persona>
 </div>
 
-<div class="box">
-<app-formulario></app-formulario>
-</div>
+<!-- <div class="box">
+  <app-formulario></app-formulario>
+</div> -->
+<router-outlet></router-outlet>
